--- a/package.json
+++ b/package.json
@@ -32,7 +32,12 @@
     "@angular/platform-server": "^21.0.0",
     "@angular/router": "^21.0.0",
     "@angular/ssr": "^21.0.4",
+    "@ngrx/effects": "^21.0.1",
+    "@ngrx/entity": "^21.0.1",
+    "@ngrx/store": "^21.0.1",
+    "@ngrx/store-devtools": "^21.0.1",
     "express": "^5.1.0",
+    "lucide-angular": "^0.563.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
@@ -42,11 +47,11 @@
     "@angular/compiler-cli": "^21.0.0",
     "@types/express": "^5.0.1",
     "@types/node": "^20.17.19",
+    "autoprefixer": "^10.4.16",
     "jsdom": "^27.1.0",
-    "typescript": "~5.9.2",
-    "vitest": "^4.0.8",
-    "tailwindcss": "^3.4.3",
     "postcss": "^8.4.31",
-    "autoprefixer": "^10.4.16"
+    "tailwindcss": "^3.4.3",
+    "typescript": "~5.9.2",
+    "vitest": "^4.0.8"
   }
 }
